--- a/docker/dockerfile/Dockerfile.comfyui_ext
+++ b/docker/dockerfile/Dockerfile.comfyui_ext
@@ -5,6 +5,22 @@ WORKDIR $NOTEBOOK_DIR/ComfyUI/custom_nodes
 # 设置默认 shell 为 bash，并使用“-i”选项启动shell
 SHELL ["/bin/bash", "-c", "-i"]
 
+# 下载grounddino项目并手动编译
+RUN cd $NOTEBOOK_DIR && git clone --depth=1 https://github.com/IDEA-Research/GroundingDINO.git;
+ENV TORCH_CUDA_ARCH_LIST="6.0;6.1;7.0;7.5;8.0;8.6+PTX;8.9;9.0"
+RUN cd $NOTEBOOK_DIR/GroundingDINO/ && python -m pip install . && cd /;
+
+# 安装 grounddino 依赖
+# RUN pip install groundingdino-py
+
+RUN apt update && apt install -y curl tree
+# 安装 VS Code（code-server）
+RUN curl -fsSL https://code-server.dev/install.sh | sh
+# 安装 VS Code 扩展
+RUN code-server --install-extension ms-python.black-formatter
+RUN code-server --install-extension ms-python.python
+RUN code-server --install-extension GitHub.copilot-nightly
+
 RUN apt-get update && apt-get install -y pkg-config libcairo2-dev
 
 RUN git clone https://github.com/Fannovel16/comfy_controlnet_preprocessors
@@ -53,6 +69,12 @@ RUN cd ComfyUI-Impact-Pack && \
     python install.py && \
     cd /;
     
+RUN git clone --depth=1 https://github.com/biegert/ComfyUI-CLIPSeg
+RUN cd ComfyUI-CLIPSeg/custom_nodes && \
+    mv clipseg.py ../../ && \
+    cd ../../ && \
+    rm -rf ComfyUI-CLIPSeg;
+
 RUN git clone --depth=1 https://github.com/ssitu/ComfyUI_NestedNodeBuilder;
 
 RUN git clone --depth=1 https://github.com/ltdrdata/ComfyUI-Workflow-Component;
@@ -80,26 +102,12 @@ RUN wget https://civitai.com/api/download/models/32123 -O models.zip \
 # # RUN rm -rf $NOTEBOOK_DIR/ComfyUI/web && mkdir $NOTEBOOK_DIR/ComfyUI/web
 # RUN unzip -o web.zip -d $NOTEBOOK_DIR/ComfyUI/web && rm web.zip
 
-# 下载grounddino项目并手动编译
-RUN cd $NOTEBOOK_DIR && git clone --depth=1 https://github.com/IDEA-Research/GroundingDINO.git;
-ENV TORCH_CUDA_ARCH_LIST="6.0;6.1;7.0;7.5;8.0;8.6+PTX;8.9;9.0"
-RUN cd $NOTEBOOK_DIR/GroundingDINO/ && python -m pip install . && cd /;
-
-# 安装 grounddino 依赖
-# RUN pip install groundingdino-py
-
 # RUN git clone https://github.com/lcolok/ComfyUI-LogicAI
 
-RUN apt update && apt install -y curl tree
-# 安装 VS Code（code-server）
-RUN curl -fsSL https://code-server.dev/install.sh | sh
-# 安装 VS Code 扩展
-RUN code-server --install-extension ms-python.black-formatter
-RUN code-server --install-extension ms-python.python
-RUN code-server --install-extension GitHub.copilot-nightly
+# 开发中的LogicAI所需要用到的依赖
+RUN pip install humanize
 
-
-# 因为此自定义插件加载所需耗时太长，为了方便开发调试，临时删除 comfy_controlnet_preprocessors
-RUN rm -rf comfy_controlnet_preprocessors
-RUN mkdir comfy_controlnet_preprocessors
-RUN touch comfy_controlnet_preprocessors/__init__.py
+# # 因为此自定义插件加载所需耗时太长，为了方便开发调试，临时删除 comfy_controlnet_preprocessors
+# RUN rm -rf comfy_controlnet_preprocessors
+# RUN mkdir comfy_controlnet_preprocessors
+# RUN touch comfy_controlnet_preprocessors/__init__.py
