--- a/docker/dockerfile/Dockerfile.sdwebui_ext
+++ b/docker/dockerfile/Dockerfile.sdwebui_ext
@@ -137,6 +137,15 @@ RUN git clone --depth=1 https://github.com/Tps-F/sd-webui-blip2
 # 安装模型转换器 sd-webui-model-converter
 RUN git clone --depth=1 https://github.com/Akegarasu/sd-webui-model-converter
 
+# # 安装 sd-webui-prompt-free-diffusion
+# RUN git clone --depth=1 https://github.com/xingqian2018/sd-webui-prompt-free-diffusion
+
+# # 安装 sd-webui-comfyui
+# RUN git clone --depth=1 https://github.com/ModelSurge/sd-webui-comfyui
+
+# # 安装 sd-webui-fabric
+# RUN git clone --depth=1 https://github.com/dvruette/sd-webui-fabric
+
 # 进行一次安装，以便将插件的依赖安装到容器中
 WORKDIR $NOTEBOOK_DIR/stable-diffusion-webui
 ENV COMMANDLINE_ARGS --skip-torch-cuda-test
